# cocotb-numpy

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: all.yml
cocotbnumpy/: base.py  signal.py  test.py  utils.py
tests/: double_ff.vhd  ff.py  ff.vhd  test_run_cocotb.py  test_signal.py
