[metadata]
name=cocotb-numpy
description=Use numpy to generate inputs and outputs for cocotb test benches
author=Justin Hugon
author_email=opensource AT hugonweb.com
version=0.0.1
license=GPLv3
classifiers=
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages =
    cocotbnumpy

install_requires =
    cocotb~=1.6.1
    numpy~=1.22.1
